@@ -56,6 +56,7 @@ requests from users, including:
   Franziska Kößler
   Scott Kostyshak
   Alex Kowarik
+  Pavel Krivitsky
   Michael Laviolette
   Thomas Leeper
   Richard Li
